--- a/Quiz.html
+++ b/Quiz.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>LPL Mastery - Quiz</title>
@@ -68,57 +69,56 @@
         // Define your quiz questions and answers
         var questions = [
             {
-                question: "when did java Language invented?",
+                question: "When was the Java Language invented?",
                 options: ["1991", "1999", "1995", "2005"],
-                answer:"1991"
+                answer: "1991"
             },
             {
                 question: "Who Created Java Language?",
-                options: ["Dmitri Mendeleev ", "Henry Wyn-Jeffry ", "James Gosling ", "Leonardo Di Caprio "],
-                answer: "James Gosling "
+                options: ["Dmitri Mendeleev", "Henry Wyn-Jeffry", "James Gosling", "Leonardo Di Caprio"],
+                answer: "James Gosling"
+            },
+            // Add more questions as needed
+            {
+                question: "Java Programs are?",
+                options: ["Faster than others", "Platforms Independent", "Not scalable", "Not Reusable"],
+                answer: "Platforms Independent"
             },
             {
-    question: "Java Programs are?",
-    options: ["Faster than others", "Platforms Independent", "Not scalable", "Not Reusable"],
-    answer: "Platforms Independent"
-},
-{
-    question: "Which statement is true about Java?",
-    options: ["Java is a sequence-dependent programming language", "Java is a code dependent programming language", "Java is a platform-dependent programming language", "Java is a platform-independent programming language"],
-    answer: "Java is a platform-independent programming language"
-},
-{
-    question: "Which component is used to compile, debug and execute the java programs?",
-    options: ["JRE", "JIT", "JDK", "JVM"],
-    answer: "JDK"
-},
-{
-    question: "Which one of the following is not a Java feature?",
-    options: ["Object-oriented", "Use of pointers", "Portable", "Dynamic and Extensible"],
-    answer: "Use of pointers"
-},
-{
-    question: "Which of the following is not an OOPS concept in Java?",
-    options: ["Polymorphism", "Inheritance", "Compilation", "Encapsulation"],
-    answer: "Compilation"
-},
-{
-    question: "What is the extension of compiled java classes?",
-    options: [".txt", ".js", ".class", ".java"],
-    answer: ".class"
-},
-{
-    question: "Which of these keywords is used to define interfaces in Java?",
-    options: ["Int", "Intf", "interface", "Innerface"],
-    answer: "interface"
-},
-{
-    question: "Which of these are selection statements in Java?",
-    options: ["break", "continue", "for()", "if()"],
-    answer: "if()"
-},
-
-            // Add more questions as needed
+                question: "Which statement is true about Java?",
+                options: ["Java is a sequence-dependent programming language", "Java is a code dependent programming language", "Java is a platform-dependent programming language", "Java is a platform-independent programming language"],
+                answer: "Java is a platform-independent programming language"
+            },
+            {
+                question: "Which component is used to compile, debug and execute the java programs?",
+                options: ["JRE", "JIT", "JDK", "JVM"],
+                answer: "JDK"
+            },
+            {
+                question: "Which one of the following is not a Java feature?",
+                options: ["Object-oriented", "Use of pointers", "Portable", "Dynamic and Extensible"],
+                answer: "Use of pointers"
+            },
+            {
+                question: "Which of the following is not an OOPS concept in Java?",
+                options: ["Polymorphism", "Inheritance", "Compilation", "Encapsulation"],
+                answer: "Compilation"
+            },
+            {
+                question: "What is the extension of compiled java classes?",
+                options: [".txt", ".js", ".class", ".java"],
+                answer: ".class"
+            },
+            {
+                question: "Which of these keywords is used to define interfaces in Java?",
+                options: ["Int", "Intf", "interface", "Innerface"],
+                answer: "interface"
+            },
+            {
+                question: "Which of these are selection statements in Java?",
+                options: ["break", "continue", "for()", "if()"],
+                answer: "if()"
+            }
         ];
 
         // Function to display the quiz
