--- a/Quiz.html
+++ b/Quiz.html
@@ -10,6 +10,9 @@
             margin-top: 20px;
             animation: fadeIn 1s ease-in-out; /* Fade-in animation */
         }
+            body {
+                background-color: black;
+        }
 
         @keyframes fadeIn {
             from {
@@ -39,7 +42,7 @@
         }
 
         button:hover {
-            background-color: #0056b3;
+            background-color: black;
         }
     </style>
 </head>
