--- a/Tutorial.html
+++ b/Tutorial.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+P<!DOCTYPE html>
 <html>
     <head>
         <title>LPL Mastery</title>
@@ -35,7 +35,7 @@
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
                   <li><a href="#print-text">Print Text</a></li>
-                  <li><a href="#print-number">Print Numbers</a></li>
+                  <li><a href="#print-number  ">Print Numbers</a></li>
                     
                    </div>
                 </ul>
