--- a/Tutorial.html
+++ b/Tutorial.html
@@ -35,7 +35,7 @@ P<!DOCTYPE html>
                   <li><a href="#lets-start">Let's Start</a></li>
                   <li><a href="#java-syntax">Java Syntax</a></li>
                   <li><a href="#print-text">Print Text</a></li>
-                  <li><a href="#print-number" class="lock-icon">Print Numbers</a></li>
+                 <!--<li><a href="#print-number" class="lock-icon">Print Numbers</a></li>-->
                     
                    </div>
                 </ul>
