--- a/Quiz.html
+++ b/Quiz.html
@@ -46,7 +46,16 @@
 </head>
 <body>
     <header>
-        <!-- Your header content -->
+        <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                   
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <h1>LPL Mastery</h1>
+            <p>Your Ultimate Resource for Java Programming</p> 
     </header>
     <main>
         <!-- Your main content -->
@@ -160,5 +169,12 @@
             alert("Your score: " + score + "/" + questions.length);
         }
     </script>
+    <footer>
+            <div class="footer-container">
+                <div class="footer-left">
+                    <p>&copy; 2024 LPL Mastery. All rights reserved.</p>
+                </div>
+            </div>
+    </footer> 
 </body>
 </html>
