--- a/About.html
+++ b/About.html
@@ -44,7 +44,11 @@
 
         </main>
         <footer>
-
+            <div class="footer-container">
+                <div class="footer-left">
+                    <p>&copy; 2024 LPL Mastery. All rights reserved.</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
