--- a/Tutorial.html
+++ b/Tutorial.html
@@ -1,4 +1,4 @@
-P<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>LPL Mastery</title>
@@ -139,7 +139,7 @@ P<!DOCTYPE html>
         <footer>
             <div class="footer-container">
                 <div class="footer-left">
-                  <p>&copy; 2023 LPL Mastery. All rights reserved.</p>
+                  <p>&copy; 2024 LPL Mastery. All rights reserved.</p>
                 </div>
         </footer>
             <script>
